--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
+    "@swc/core": "^1.10.15",
+    "@swc/jest": "^0.2.37",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
